# pico-coremark

./: .gitmodules  CMakeLists.txt  README.md  core_portme.c  core_portme.h
